html to mongodb

--- a/web_scraper.ipynb
+++ b/web_scraper.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "improved-progressive",
+   "id": "classified-jungle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,15 +24,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "saved-superior",
+   "id": "loved-joint",
    "metadata": {},
    "source": [
-    "## Request the webpage's raw HTML"
+    "## Request the webpage's raw HTML and store into MongoDB"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "three-royalty",
+   "id": "proud-target",
    "metadata": {},
    "source": [
     "In order to get each player's career \"per game\" stats, we need to iterate through the alphabet and individually click on each player's name. This may be messy to do given that at the end of each alphabet, we must go back to the player directory landing page and click the next letter. Instead - lets iterate through the alphabet (links are consistent with the /'letter' changing i.e. https://www.basketball-reference.com/players/a/) and grab the list of hyperlinks per alphabet and then iterate through those individual player links to get the html. "
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "wooden-czech",
+   "id": "adverse-management",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "inside-relations",
+   "id": "republican-description",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "editorial-printer",
+   "id": "radio-pillow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,9 +84,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "desperate-verification",
+   "metadata": {},
+   "source": [
+    "Iterating through all individual basketball player links, getting the html from the page and throwing it into mongodb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "id": "alert-vermont",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def html_to_mongodb(urls):\n",
+    "    client = MongoClient()\n",
+    "    db = client.capstone3_bball\n",
+    "    players = db.players\n",
+    "    \n",
+    "    for url in urls:\n",
+    "        page = requests.get(url)\n",
+    "        players.insert_one({'link':url, 'html':page.text})\n",
+    "        \n",
+    "    return 'Done!'\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 278,
+   "id": "dramatic-threat",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Done!'"
+      ]
+     },
+     "execution_count": 278,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "html_to_mongodb(a_z_all_player_urls)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "meaningful-ordinary",
+   "id": "ancient-germany",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "standing-indianapolis",
+   "id": "pending-renewal",
    "metadata": {},
    "source": [
     "If they played in both ABA and NBA - then their NBA score is the second row"
@@ -114,8 +163,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "second-tyler",
+   "execution_count": 233,
+   "id": "korean-entity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,8 +174,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "cathedral-animal",
+   "execution_count": 234,
+   "id": "adult-prince",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,8 +184,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "prescribed-painting",
+   "execution_count": 235,
+   "id": "satisfactory-treat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,8 +194,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "consolidated-girlfriend",
+   "execution_count": 270,
+   "id": "liable-stuart",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,15 +205,13 @@
     "\n",
     "#list of columns\n",
     "columns = [G, GS, MP, FG, FGA, FGPercentage, Three_P, Three_PA, Three_P_Percentage, Two_P, Two_PA, Two_P_Percentage, \\\n",
-    "EFG_Percentage, FT, FTA, FT_Percentage, ORB, DRB, TRB, AST, STL, BLK, TOV, PF, PTS]\n",
-    "\n",
-    "    \n"
+    "EFG_Percentage, FT, FTA, FT_Percentage, ORB, DRB, TRB, AST, STL, BLK, TOV, PF, PTS]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "ongoing-craft",
+   "execution_count": 245,
+   "id": "measured-empire",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,14 +219,86 @@
     "    for val,col in zip(x.find_all('tr')[1].find_all('td')[4:], columns):\n",
     "        print(val)\n",
     "else:\n",
-    "    for val,col in zip(x.find_all('tr')[0].find_all('td')[4:], columns):\n",
-    "        col.append(val)"
+    "    for i,stat in enumerate(x.find_all('tr')[0].find_all('td')[4:]):\n",
+    "        print(columns)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "concerned-consumption",
+   "id": "sound-cartoon",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
+   "id": "acute-tenant",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_stats = []\n",
+    "if 'ABA' in x.find_all('tr')[0].text:\n",
+    "    for val,col in zip(x.find_all('tr')[1].find_all('td')[4:], columns):\n",
+    "        print(val)\n",
+    "else:\n",
+    "    player_stats = []\n",
+    "    for stat in x.find_all('tr')[0].find_all('td')[4:]:\n",
+    "        player_stats.append(stat.text)\n",
+    "    all_stats.append(player_stats)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 273,
+   "id": "executed-bubble",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['256',\n",
+       "  '53',\n",
+       "  '12.5',\n",
+       "  '2.4',\n",
+       "  '4.8',\n",
+       "  '.502',\n",
+       "  '0.0',\n",
+       "  '0.0',\n",
+       "  '.000',\n",
+       "  '2.4',\n",
+       "  '4.8',\n",
+       "  '.503',\n",
+       "  '.502',\n",
+       "  '0.9',\n",
+       "  '1.3',\n",
+       "  '.701',\n",
+       "  '1.1',\n",
+       "  '2.2',\n",
+       "  '3.3',\n",
+       "  '0.3',\n",
+       "  '0.3',\n",
+       "  '0.3',\n",
+       "  '1.0',\n",
+       "  '1.9',\n",
+       "  '5.7']]"
+      ]
+     },
+     "execution_count": 273,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "automated-hawaii",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -187,15 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "quiet-swiss",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "lesser-azerbaijan",
+   "id": "green-values",
    "metadata": {},
    "outputs": [],
    "source": []
