--- a/web_scraper.ipynb
+++ b/web_scraper.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 200,
    "id": "incident-harbor",
    "metadata": {},
    "outputs": [],
@@ -223,12 +223,12 @@
     "                else:\n",
     "                    player_info[26] = stat.text\n",
     "\n",
-    "            all_players_info.append(player_info)\n",
+    "        all_players_info.append(player_info)\n",
     "        \n",
-    "        df_columns = columns = ['Player','Pos','G','GS','MP','FG','FGA','FG%','3P','3PA','3P%','2P','2PA','2P%','eFG%','FT',\n",
+    "    df_columns = columns = ['Player','Pos','G','GS','MP','FG','FGA','FG%','3P','3PA','3P%','2P','2PA','2P%','eFG%','FT',\n",
     "          'FTA','FT%','ORB','DRB','TRB','AST','STL','BLK','TOV','PF','PTS']\n",
     "        \n",
-    "        df = pd.DataFrame(columns = df_columns, data = all_players_info)\n",
+    "    df = pd.DataFrame(columns = df_columns, data = all_players_info)\n",
     "        \n",
     "    return df\n",
     "        \n",
@@ -245,21 +245,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 208,
    "id": "electric-roommate",
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_data = parse_to_df(['https://www.basketball-reference.com/players/a/abdelal01.html',\n",
-    " 'https://www.basketball-reference.com/players/a/abdulza01.html',\n",
-    " 'https://www.basketball-reference.com/players/a/abdulka01.html',\n",
-    " 'https://www.basketball-reference.com/players/a/abdulma02.html'])"
+    "df = parse_to_df(a_z_all_player_urls)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
-   "id": "german-litigation",
+   "execution_count": 209,
+   "id": "forty-connecticut",
    "metadata": {},
    "outputs": [
     {
@@ -403,205 +400,223 @@
        "      <td>1.9</td>\n",
        "      <td>14.6</td>\n",
        "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4 rows × 27 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                Player                       Pos     G   GS    MP    FG   FGA  \\\n",
-       "0       Alaa Abdelnaby             Power Forward   256   53  12.5   2.4   4.8   \n",
-       "1      Zaid Abdul-Aziz  Center and Power Forward   505       21.8   3.5   8.2   \n",
-       "2  Kareem Abdul-Jabbar                    Center  1560  625  36.8  10.2  18.1   \n",
-       "3   Mahmoud Abdul-Rauf               Point Guard   586  336  26.7   6.0  13.6   \n",
-       "\n",
-       "    FG%   3P  3PA  ...   FT%  ORB  DRB   TRB  AST  STL  BLK  TOV   PF   PTS  \n",
-       "0  .502  0.0  0.0  ...  .701  1.1  2.2   3.3  0.3  0.3  0.3  1.0  1.9   5.7  \n",
-       "1  .428  NaN  NaN  ...  .728  2.4  5.4   8.0  1.2  0.6  1.0  0.9  2.2   9.0  \n",
-       "2  .559  0.0  0.0  ...  .721  2.4  7.6  11.2  3.6  0.9  2.6  2.7  3.0  24.6  \n",
-       "3  .442  0.8  2.3  ...  .905  0.4  1.5   1.9  3.5  0.8  0.1  1.6  1.9  14.6  \n",
-       "\n",
-       "[4 rows x 27 columns]"
-      ]
-     },
-     "execution_count": 185,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "all_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 182,
-   "id": "fabulous-mayor",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Player</th>\n",
-       "      <th>Pos</th>\n",
-       "      <th>G</th>\n",
-       "      <th>GS</th>\n",
-       "      <th>MP</th>\n",
-       "      <th>FG</th>\n",
-       "      <th>FGA</th>\n",
-       "      <th>FG%</th>\n",
-       "      <th>3P</th>\n",
-       "      <th>3PA</th>\n",
-       "      <th>...</th>\n",
-       "      <th>FT%</th>\n",
-       "      <th>ORB</th>\n",
-       "      <th>DRB</th>\n",
-       "      <th>TRB</th>\n",
-       "      <th>AST</th>\n",
-       "      <th>STL</th>\n",
-       "      <th>BLK</th>\n",
-       "      <th>TOV</th>\n",
-       "      <th>PF</th>\n",
-       "      <th>PTS</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Alaa Abdelnaby</td>\n",
-       "      <td>Power Forward</td>\n",
-       "      <td>256</td>\n",
-       "      <td>53</td>\n",
-       "      <td>12.5</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>4.8</td>\n",
-       "      <td>.502</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>.701</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>5.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Zaid Abdul-Aziz</td>\n",
-       "      <td>Center and Power Forward</td>\n",
-       "      <td>505</td>\n",
-       "      <td></td>\n",
-       "      <td>21.8</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>8.2</td>\n",
-       "      <td>.428</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>.728</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>9.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Kareem Abdul-Jabbar</td>\n",
-       "      <td>Center</td>\n",
-       "      <td>1560</td>\n",
-       "      <td>625</td>\n",
-       "      <td>36.8</td>\n",
-       "      <td>10.2</td>\n",
-       "      <td>18.1</td>\n",
-       "      <td>.559</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>.721</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>7.6</td>\n",
-       "      <td>11.2</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>24.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Mahmoud Abdul-Rauf</td>\n",
-       "      <td>Point Guard</td>\n",
-       "      <td>586</td>\n",
-       "      <td>336</td>\n",
-       "      <td>26.7</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>13.6</td>\n",
-       "      <td>.442</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>...</td>\n",
-       "      <td>.905</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>0.8</td>\n",
+       "      <th>4</th>\n",
+       "      <td>Tariq Abdul-Wahad</td>\n",
+       "      <td>Shooting Guard</td>\n",
+       "      <td>236</td>\n",
+       "      <td>145</td>\n",
+       "      <td>20.4</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>.417</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>14.6</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>.703</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>7.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4499</th>\n",
+       "      <td>Paul Zipser</td>\n",
+       "      <td>Small Forward</td>\n",
+       "      <td>98</td>\n",
+       "      <td>30</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>.371</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>.769</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>4.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4500</th>\n",
+       "      <td>Ante Žižić</td>\n",
+       "      <td>Center</td>\n",
+       "      <td>113</td>\n",
+       "      <td>27</td>\n",
+       "      <td>13.4</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>.581</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>.711</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4501</th>\n",
+       "      <td>Jim Zoet</td>\n",
+       "      <td>Center</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>.200</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4502</th>\n",
+       "      <td>Bill Zopf</td>\n",
+       "      <td>Point Guard</td>\n",
+       "      <td>53</td>\n",
+       "      <td></td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>.363</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>.556</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>2.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4503</th>\n",
+       "      <td>Ivica Zubac</td>\n",
+       "      <td>Center</td>\n",
+       "      <td>271</td>\n",
+       "      <td>138</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>.584</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>.769</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>7.7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4 rows × 27 columns</p>\n",
+       "<p>4504 rows × 27 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                Player                       Pos     G   GS    MP    FG   FGA  \\\n",
-       "0       Alaa Abdelnaby             Power Forward   256   53  12.5   2.4   4.8   \n",
-       "1      Zaid Abdul-Aziz  Center and Power Forward   505       21.8   3.5   8.2   \n",
-       "2  Kareem Abdul-Jabbar                    Center  1560  625  36.8  10.2  18.1   \n",
-       "3   Mahmoud Abdul-Rauf               Point Guard   586  336  26.7   6.0  13.6   \n",
+       "                   Player                       Pos     G   GS    MP    FG  \\\n",
+       "0          Alaa Abdelnaby             Power Forward   256   53  12.5   2.4   \n",
+       "1         Zaid Abdul-Aziz  Center and Power Forward   505       21.8   3.5   \n",
+       "2     Kareem Abdul-Jabbar                    Center  1560  625  36.8  10.2   \n",
+       "3      Mahmoud Abdul-Rauf               Point Guard   586  336  26.7   6.0   \n",
+       "4       Tariq Abdul-Wahad            Shooting Guard   236  145  20.4   3.1   \n",
+       "...                   ...                       ...   ...  ...   ...   ...   \n",
+       "4499          Paul Zipser             Small Forward    98   30  17.0   1.7   \n",
+       "4500           Ante Žižić                    Center   113   27  13.4   2.4   \n",
+       "4501             Jim Zoet                    Center     7    0   4.3   0.1   \n",
+       "4502            Bill Zopf               Point Guard    53        7.5   0.9   \n",
+       "4503          Ivica Zubac                    Center   271  138  17.3   3.1   \n",
        "\n",
-       "    FG%   3P  3PA  ...   FT%  ORB  DRB   TRB  AST  STL  BLK  TOV   PF   PTS  \n",
-       "0  .502  0.0  0.0  ...  .701  1.1  2.2   3.3  0.3  0.3  0.3  1.0  1.9   5.7  \n",
-       "1  .428  NaN  NaN  ...  .728  2.4  5.4   8.0  1.2  0.6  1.0  0.9  2.2   9.0  \n",
-       "2  .559  0.0  0.0  ...  .721  2.4  7.6  11.2  3.6  0.9  2.6  2.7  3.0  24.6  \n",
-       "3  .442  0.8  2.3  ...  .905  0.4  1.5   1.9  3.5  0.8  0.1  1.6  1.9  14.6  \n",
+       "       FGA   FG%   3P  3PA  ...   FT%  ORB  DRB   TRB  AST  STL  BLK  TOV  \\\n",
+       "0      4.8  .502  0.0  0.0  ...  .701  1.1  2.2   3.3  0.3  0.3  0.3  1.0   \n",
+       "1      8.2  .428  NaN  NaN  ...  .728  2.4  5.4   8.0  1.2  0.6  1.0  0.9   \n",
+       "2     18.1  .559  0.0  0.0  ...  .721  2.4  7.6  11.2  3.6  0.9  2.6  2.7   \n",
+       "3     13.6  .442  0.8  2.3  ...  .905  0.4  1.5   1.9  3.5  0.8  0.1  1.6   \n",
+       "4      7.3  .417  0.1  0.3  ...  .703  1.2  2.1   3.3  1.1  0.8  0.4  1.3   \n",
+       "...    ...   ...  ...  ...  ...   ...  ...  ...   ...  ...  ...  ...  ...   \n",
+       "4499   4.6  .371  0.7  2.1  ...  .769  0.3  2.3   2.6  0.8  0.4  0.3  0.8   \n",
+       "4500   4.2  .581  0.0  0.0  ...  .711  1.3  2.6   3.9  0.6  0.2  0.4  0.7   \n",
+       "4501   0.7  .200  0.0  0.0  ...        0.4  0.7   1.1  0.1  0.1  0.4  0.6   \n",
+       "4502   2.5  .363  NaN  NaN  ...  .556  NaN  NaN   0.9  1.4  NaN  NaN  NaN   \n",
+       "4503   5.3  .584  0.0  0.0  ...  .769  2.1  3.9   6.0  1.0  0.3  0.8  0.9   \n",
        "\n",
-       "[4 rows x 27 columns]"
+       "       PF   PTS  \n",
+       "0     1.9   5.7  \n",
+       "1     2.2   9.0  \n",
+       "2     3.0  24.6  \n",
+       "3     1.9  14.6  \n",
+       "4     2.1   7.8  \n",
+       "...   ...   ...  \n",
+       "4499  1.7   4.7  \n",
+       "4500  1.5   6.0  \n",
+       "4501  1.3   0.3  \n",
+       "4502  0.6   2.2  \n",
+       "4503  2.1   7.7  \n",
+       "\n",
+       "[4504 rows x 27 columns]"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,16 +627,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "atomic-bikini",
+   "execution_count": 210,
+   "id": "sitting-ambassador",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# df.to_csv('player_stats.csv')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "nominated-interval",
+   "id": "hungarian-soviet",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -632,18 +649,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.10"
   }
  },
  "nbformat": 4,
