--- a/web_scraper.ipynb
+++ b/web_scraper.ipynb
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "id": "forty-connecticut",
+   "id": "recorded-venice",
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": 210,
-   "id": "sitting-ambassador",
+   "id": "existing-intent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hungarian-soviet",
+   "id": "monetary-intent",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -649,6 +649,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
