targets are updated/cleaned

--- a/predicting_player_positions.ipynb
+++ b/predicting_player_positions.ipynb
@@ -980,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "loose-drawing",
+   "id": "round-pressing",
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "brave-interest",
+   "id": "electoral-buyer",
    "metadata": {},
    "source": [
     "Further cleaning the Target column - classifying those with '/' with the first position and changing guard to the corresponding position etc."
@@ -1010,31 +1010,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "tired-routine",
+   "execution_count": 39,
+   "id": "false-monte",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "all_player_stats.replace(['Center/Forward','Guard/Forward','Forward/Center','Forward/Guard','Point Guard\\n'],\n",
+    "                        ['Center', 'Shooting Guard','Power Forward', 'Small Forward', 'Point Guard'], inplace = True)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "minus-gibson",
+   "execution_count": 51,
+   "id": "historic-annex",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-11-362fc17de2c6>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-362fc17de2c6>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    guard/forward -> small forward shooting guard\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array(['Power Forward', 'Center', 'Point Guard', 'Shooting Guard',\n",
+       "       'Small Forward'], dtype=object)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "guard/forward -> small forward shooting guard\n",
-    "forward/guard -> small forward shooting guard\n",
-    "center/forward -> power forward "
+    "# Targets look good\n",
+    "all_player_stats['Target'].unique()"
    ]
   },
   {
