--- a/web_scraper.ipynb
+++ b/web_scraper.ipynb
@@ -127,6 +127,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "other-career",
+   "metadata": {},
+   "source": [
+    "## Parse HTML and Create DataFrame"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 200,
    "id": "incident-harbor",
