try using the targets with the original positions to see if it does any better

--- a/predicting_player_positions.ipynb
+++ b/predicting_player_positions.ipynb
@@ -3023,7 +3023,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mysterious-tactics",
+   "id": "minus-tribe",
    "metadata": {},
    "source": [
     "Try the same thing that we did with rf with logistic regression "
@@ -3066,7 +3066,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "quantitative-species",
+   "id": "existing-cooperation",
    "metadata": {},
    "outputs": [
     {
@@ -3088,7 +3088,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "honey-creator",
+   "id": "encouraging-edward",
    "metadata": {},
    "source": [
     "Using just the 5 main stats seems to look like it is underfitting a little - try making the model more complex to combat underfitting - add in more features"
@@ -3097,7 +3097,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "loaded-clerk",
+   "id": "wireless-exclusion",
    "metadata": {},
    "outputs": [
     {
@@ -3129,7 +3129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "quick-relief",
+   "id": "acute-swift",
    "metadata": {},
    "source": [
     "Seems like logistic regression is perfoming the best so far - currently we are just dropping rows with NaN values but we don't have much data to begin with - so lets try imputing with KNN"
@@ -3138,7 +3138,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "productive-witch",
+   "id": "suspended-allergy",
    "metadata": {},
    "outputs": [
     {
@@ -3188,7 +3188,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "compact-thesaurus",
+   "id": "dominant-ordinance",
    "metadata": {},
    "outputs": [
     {
@@ -3559,7 +3559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "excess-software",
+   "id": "modified-nursery",
    "metadata": {},
    "source": [
     "When scraping the data - I knew there would be NaNs since some stats were not available for some players (it seems like it mostly was for the earlier seasons in the NBA) - we don't have dates for the data so I cannot filter it out by date. And other NaNs make sense i.e. why some players have NaNs for 3 point attempts since 3 pointers weren't a thing prior to 1979 but looking at some examples where 2 point attempts were NaNs we can see that field goal attempts were not - that means those player simply just didn't have field goal attempt break downs (goes back to the first point). "
@@ -3568,7 +3568,7 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "id": "working-estonia",
+   "id": "arctic-guess",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3608,7 +3608,7 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "id": "invisible-melissa",
+   "id": "cross-southeast",
    "metadata": {},
    "outputs": [
     {
@@ -3849,7 +3849,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "minus-chair",
+   "id": "sufficient-trouble",
    "metadata": {},
    "source": [
     "Try the same thing for Random Forest - then pick the best model to tune if possible"
@@ -3858,7 +3858,7 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "id": "unexpected-adoption",
+   "id": "pretty-movement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3898,7 +3898,7 @@
   {
    "cell_type": "code",
    "execution_count": 247,
-   "id": "experienced-dream",
+   "id": "dominican-spirit",
    "metadata": {},
    "outputs": [
     {
@@ -4139,11 +4139,133 @@
   },
   {
    "cell_type": "markdown",
-   "id": "outer-silver",
+   "id": "developed-equity",
    "metadata": {},
    "source": [
-    "Since Random Forest and Logistic Regression performances are not too far o"
+    "Before we hypertune any model - one last endeavor, are we having issues with predicting targets given our current information or is it because some players can be better described as hybrids and therefore those who were categorized as multiple positions should truly be done so? Especially since there is so much overlap between certain positions. Let's try using our previous targets but cleaned up to make sure they're consistent (some are same positions, different orders)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "id": "coated-cycle",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Power Forward', 'Center and Power Forward', 'Center',\n",
+       "       'Point Guard', 'Shooting Guard',\n",
+       "       'Power Forward, Small Forward, and Center',\n",
+       "       'Small Forward and Power Forward', 'Small Forward',\n",
+       "       'Power Forward and Small Forward',\n",
+       "       'Shooting Guard and Small Forward',\n",
+       "       'Shooting Guard and Point Guard', 'Power Forward and Center',\n",
+       "       'Point Guard and Shooting Guard',\n",
+       "       'Shooting Guard, Small Forward, and Point Guard',\n",
+       "       'Small Forward and Shooting Guard',\n",
+       "       'Power Forward, Small Forward, Shooting Guard, and Point Guard',\n",
+       "       'Small Forward and Point Guard',\n",
+       "       'Small Forward, Shooting Guard, and Power Forward',\n",
+       "       'Center, Power Forward, and Small Forward',\n",
+       "       'Small Forward, Power Forward, and Center',\n",
+       "       'Shooting Guard, Small Forward, and Power Forward',\n",
+       "       'Small Forward, Power Forward, and Shooting Guard',\n",
+       "       'Power Forward, Center, and Small Forward',\n",
+       "       'Power Forward and Shooting Guard',\n",
+       "       'Power Forward, Small Forward, and Shooting Guard',\n",
+       "       'Shooting Guard, Point Guard, and Small Forward',\n",
+       "       'Small Forward, Power Forward, Point Guard, and Shooting Guard',\n",
+       "       'Small Forward and Center',\n",
+       "       'Point Guard, Shooting Guard, and Power Forward',\n",
+       "       'Small Forward, Shooting Guard, and Point Guard',\n",
+       "       'Point Guard and Small Forward',\n",
+       "       'Small Forward, Power Forward, and Point Guard'], dtype=object)"
+      ]
+     },
+     "execution_count": 250,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_player_stats['Pos'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ideal-reporter",
+   "metadata": {},
+   "source": [
+    "get a list of true uniques to keep track of"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "id": "straight-frost",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Power Forward\n",
+      "Center and Power Forward\n",
+      "Center\n",
+      "Point Guard\n",
+      "Shooting Guard\n",
+      "Power Forward, Small Forward, and Center\n",
+      "Small Forward and Power Forward\n",
+      "Small Forward\n",
+      "Power Forward and Small Forward\n",
+      "Shooting Guard and Small Forward\n",
+      "Shooting Guard and Point Guard\n",
+      "Power Forward and Center\n",
+      "Point Guard and Shooting Guard\n",
+      "Shooting Guard, Small Forward, and Point Guard\n",
+      "Small Forward and Shooting Guard\n",
+      "Power Forward, Small Forward, Shooting Guard, and Point Guard\n",
+      "Small Forward and Point Guard\n",
+      "Small Forward, Shooting Guard, and Power Forward\n",
+      "Center, Power Forward, and Small Forward\n",
+      "Small Forward, Power Forward, and Center\n",
+      "Shooting Guard, Small Forward, and Power Forward\n",
+      "Small Forward, Power Forward, and Shooting Guard\n",
+      "Power Forward, Center, and Small Forward\n",
+      "Power Forward and Shooting Guard\n",
+      "Power Forward, Small Forward, and Shooting Guard\n",
+      "Shooting Guard, Point Guard, and Small Forward\n",
+      "Small Forward, Power Forward, Point Guard, and Shooting Guard\n",
+      "Small Forward and Center\n",
+      "Point Guard, Shooting Guard, and Power Forward\n",
+      "Small Forward, Shooting Guard, and Point Guard\n",
+      "Point Guard and Small Forward\n",
+      "Small Forward, Power Forward, and Point Guard\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_positions_cleaned = []\n",
+    "for position in all_player_stats['Pos'].unique():\n",
+    "    print(position)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "insured-response",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "integral-archive",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
